fix(79): Download order zip file with invalid file size in database